# crucible-ai

./: ARCHITECTURE.md  App_runtime_authority_checklist.md  CHANGELOG.md  Grokenstein_v0.0.4_iteration_plan.md  Grokenstein_v1.0.1_foundation_plan.md  README.md  RELEASE_CHECKLIST_v0.0.4.md  RELEASE_CHECKLIST_v0.0.5.md  THREAT_MODEL.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 24912d9fd3a7_initial_schema.py
app/: main.py
app/api/: chat.py  chat_stream.py  health.py  memory.py  sessions.py  workspaces.py
app/brain/: __init__.py  brain.py
app/broker/: broker.py
app/cli/: __init__.py  main.py
app/core/: audit.py  config.py  trust.py
app/db/: deps.py  engine.py  models.py  repository.py
app/finance/: __init__.py  schemas.py
data/: memory.json
docker/: Dockerfile  Dockerfile.bitcoind  Dockerfile.lnd
docs/: Grokenstein_v0.0.5_iteration_plan.md
grokenstein/: __init__.py  __main__.py  approval_queue.py  approvals.py  audit.py  broker.py  config.py  history.py  logger.py  main.py  memory.py  model.py  policy.py  runtime.py  session.py  tool_broker.py
logs/: audit.jsonl
scripts/: policy_config.yaml
src/: __init__.py  commands.py  context.py  history.py  main.py  models.py  models_router.py  permissions.py  query_engine.py  runtime.py  session_store.py  tools.py  transcript.py
tests/: __init__.py  test_broker.py  test_core.py  test_filesystem.py  test_policy.py  test_runtime.py  test_runtime_resume.py  test_tasks.py  test_workspace.py
workspace/: my file.txt  my_interactive.txt  testfile2.txt
(+38 files in other folders)
